Maj du theme dark

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,13 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+  h5 {
+    color: var(--colortxt);
+  }
+  li {
+    font-size: var(--p);
+    color: var(--colortxt);
+  }
 }
 @layer base {
   p {
